--- a/index.html
+++ b/index.html
@@ -3,83 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marco Ciola Cubattoli - Samba Superman</title>
+    <title>Marco Cubattoli</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background: radial-gradient(circle, #ffde00, #e60000); /* Colori Superman */
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            font-family: 'Arial Black', sans-serif;
-            overflow: hidden;
+            font-family: Arial, sans-serif;
         }
 
-        h1 {
-            color: white;
-            text-shadow: 3px 3px #0052a3;
-            text-transform: uppercase;
-            text-align: center;
-            z-index: 10;
-        }
-
-        .container {
-            position: relative;
-            width: 300px;
-            height: 400px;
-        }
-
-        /* L'animazione della Samba */
         .ballerino {
-            width: 100%;
-            height: auto;
-            animation: samba 0.6s infinite alternate ease-in-out;
-            filter: drop-shadow(0 10px 15px rgba(0,0,0,0.5));
-        }
-
-        @keyframes samba {
-            0% { transform: translateY(0) rotate(-5deg) scale(1); }
-            50% { transform: translateY(-20px) rotate(0deg) scale(1.05); }
-            100% { transform: translateY(0) rotate(5deg) scale(1); }
-        }
-
-        .pedana {
             width: 200px;
-            height: 50px;
-            background: rgba(0,0,0,0.2);
-            border-radius: 50%;
-            margin-top: -20px;
-            animation: shadow 0.6s infinite alternate ease-in-out;
+            height: 200px;
+            animation: balla 0.8s infinite alternate ease-in-out;
+            margin-bottom: 20px;
         }
 
-        @keyframes shadow {
-            from { transform: scale(1); opacity: 0.4; }
-            to { transform: scale(1.2); opacity: 0.2; }
+        @keyframes balla {
+            0% { transform: translateY(0) rotate(-3deg); }
+            50% { transform: translateY(-30px) rotate(3deg); }
+            100% { transform: translateY(0) rotate(-3deg); }
         }
 
-        .caption {
-            color: #0052a3;
-            background: white;
-            padding: 10px 20px;
-            border-radius: 20px;
-            margin-top: 20px;
+        h2 {
+            color: white;
+            font-size: 28px;
+            margin: 0;
             font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
     </style>
 </head>
 <body>
-
-    <h1>Marco Ciola Cubattoli</h1>
     
-    <div class="container">
-        <img src="marco_superman.png" alt="Marco balla la samba" class="ballerino">
-        <div class="pedana"></div>
-    </div>
-
-    <div class="caption">🕺 IL RE DELLA SAMBA KRIPTONIANA 🕺</div>
+    <img src="pelato.png" alt="Marco che balla" class="ballerino">
+    <h2>Marco Cubattoli</h2>
 
 </body>
 </html>
